--- a/app/src/main/res/drawable/logosplash.xml
+++ b/app/src/main/res/drawable/logosplash.xml
@@ -5,7 +5,7 @@
     android:viewportWidth="220"
     android:viewportHeight="56">
     <path
-        android:pathData="M48 46.22c-0.4-9.87 0.05-16.53 0-29.72c-2.7-1.48-17.18 8.56-22.3 13.2v26.16c9.37-0.22 22.46-8.33 22.3-9.64z">
+        android:pathData="M48 46.22c-0.4-9.87 0.05-16.53 0-29.72-2.7-1.48-17.18 8.56-22.3 13.2v26.16c9.37-0.22 22.46-8.33 22.3-9.64Z">
         <aapt:attr name="android:fillColor">
             <gradient
                 android:type="linear"
@@ -14,16 +14,16 @@
                 android:endX="24"
                 android:endY="56">
                 <item
-                    android:color="#00A3FF"
+                    android:color="#FF00A3FF"
                     android:offset="0"/>
                 <item
-                    android:color="#2F80ED"
+                    android:color="#FF2F80ED"
                     android:offset="1"/>
             </gradient>
         </aapt:attr>
     </path>
     <path
-        android:pathData="M0 46.22c0.07-12.38 0.02-18.88 0-29.7c7.03 1.72 22.87 13.62 23.03 13.2v-0.03v0.02v26.15c-7.5 1.42-20.51-8.2-23.03-9.64z">
+        android:pathData="M0 46.22c0.07-12.38 0.02-18.88 0-29.7 7.03 1.72 22.87 13.62 23.03 13.2v-0.03 0.02 26.15c-7.5 1.42-20.51-8.2-23.03-9.64Z">
         <aapt:attr name="android:fillColor">
             <gradient
                 android:type="linear"
@@ -32,16 +32,16 @@
                 android:endX="24"
                 android:endY="56">
                 <item
-                    android:color="#00A3FF"
+                    android:color="#FF00A3FF"
                     android:offset="0"/>
                 <item
-                    android:color="#2F80ED"
+                    android:color="#FF2F80ED"
                     android:offset="1"/>
             </gradient>
         </aapt:attr>
     </path>
     <path
-        android:pathData="M48 46.22c-0.4-9.87 0.05-16.53 0-29.72c-2.7-1.48-17.18 8.56-22.3 13.2v26.16c9.37-0.22 22.46-8.33 22.3-9.64z">
+        android:pathData="M48 46.22c-0.4-9.87 0.05-16.53 0-29.72-2.7-1.48-17.18 8.56-22.3 13.2v26.16c9.37-0.22 22.46-8.33 22.3-9.64Z">
         <aapt:attr name="android:fillColor">
             <gradient
                 android:type="linear"
@@ -50,16 +50,16 @@
                 android:endX="24"
                 android:endY="56">
                 <item
-                    android:color="#00A3FF"
+                    android:color="#FF00A3FF"
                     android:offset="0"/>
                 <item
-                    android:color="#2F80ED"
+                    android:color="#FF2F80ED"
                     android:offset="1"/>
             </gradient>
         </aapt:attr>
     </path>
     <path
-        android:pathData="M0 46.22c0.07-12.38 0.02-18.88 0-29.7c7.03 1.72 22.87 13.62 23.03 13.2v-0.03v0.02v26.15c-7.5 1.42-20.51-8.2-23.03-9.64z">
+        android:pathData="M0 46.22c0.07-12.38 0.02-18.88 0-29.7 7.03 1.72 22.87 13.62 23.03 13.2v-0.03 0.02 26.15c-7.5 1.42-20.51-8.2-23.03-9.64Z">
         <aapt:attr name="android:fillColor">
             <gradient
                 android:type="linear"
@@ -68,16 +68,16 @@
                 android:endX="24"
                 android:endY="56">
                 <item
-                    android:color="#00A3FF"
+                    android:color="#FF00A3FF"
                     android:offset="0"/>
                 <item
-                    android:color="#2F80ED"
+                    android:color="#FF2F80ED"
                     android:offset="1"/>
             </gradient>
         </aapt:attr>
     </path>
     <path
-        android:pathData="M35.87 12.09c0 6.67-5.35 12.08-11.95 12.08s-11.96-5.4-11.96-12.08S17.3 0 23.92 0c6.6 0 11.95 5.41 11.95 12.09z">
+        android:pathData="M35.87 12.09c0 6.67-5.35 12.08-11.95 12.08s-11.96-5.4-11.96-12.08S17.3 0 23.92 0c6.6 0 11.95 5.41 11.95 12.09Z">
         <aapt:attr name="android:fillColor">
             <gradient
                 android:type="linear"
@@ -86,19 +86,19 @@
                 android:endX="24"
                 android:endY="56">
                 <item
-                    android:color="#00A3FF"
+                    android:color="#FF00A3FF"
                     android:offset="0"/>
                 <item
-                    android:color="#2F80ED"
+                    android:color="#FF2F80ED"
                     android:offset="1"/>
             </gradient>
         </aapt:attr>
     </path>
     <path
-        android:fillColor="@color/textMainColor"
-        android:pathData="M83.9 34.27H69.88L66.84 41h-2.77L75.6 15.8h2.63L89.74 41h-2.8l-3.03-6.73zm-0.96-2.16l-6.05-13.54l-6.05 13.54h12.1zm36.37-10.05L112.15 41h-2.42l-5.97-15.52L97.78 41h-2.4l-7.14-18.94h2.45l5.94 16.1l6.09-16.1h2.2l6.04 16.1l6.01-16.1h2.34zm18.91 10.26h-15.84c0.15 1.97 0.9 3.57 2.27 4.8c1.37 1.2 3.1 1.8 5.18 1.8c1.18 0 2.26-0.21 3.24-0.62c0.99-0.43 1.84-1.06 2.56-1.87l1.44 1.65c-0.84 1.01-1.9 1.78-3.17 2.3c-1.25 0.54-2.63 0.8-4.14 0.8c-1.94 0-3.67-0.4-5.18-1.22c-1.5-0.84-2.66-2-3.5-3.46c-0.83-1.46-1.25-3.12-1.25-4.97c0-1.85 0.4-3.5 1.18-4.97c0.82-1.46 1.92-2.6 3.31-3.42c1.42-0.81 3-1.22 4.76-1.22c1.75 0 3.32 0.4 4.71 1.22c1.4 0.82 2.49 1.96 3.28 3.42c0.8 1.44 1.19 3.1 1.19 4.97l-0.04 0.8zm-9.14-8.2c-1.83 0-3.36 0.58-4.61 1.76c-1.22 1.15-1.92 2.66-2.09 4.54h13.43c-0.17-1.88-0.88-3.39-2.13-4.54c-1.22-1.18-2.75-1.76-4.6-1.76z"/>
+        android:fillColor="#FF092134"
+        android:pathData="M83.9 34.27H69.88L66.84 41h-2.77L75.6 15.8h2.63L89.74 41h-2.8l-3.03-6.73Zm-0.96-2.16l-6.05-13.54-6.05 13.54h12.1Zm36.37-10.05L112.15 41h-2.42l-5.97-15.52L97.78 41h-2.4l-7.14-18.94h2.45l5.94 16.1 6.09-16.1h2.2l6.04 16.1 6.01-16.1h2.34Zm18.91 10.26h-15.84c0.15 1.97 0.9 3.57 2.27 4.8 1.37 1.2 3.1 1.8 5.18 1.8 1.18 0 2.26-0.21 3.24-0.62 0.99-0.43 1.84-1.06 2.56-1.87l1.44 1.65c-0.84 1.01-1.9 1.78-3.17 2.3-1.25 0.54-2.63 0.8-4.14 0.8-1.94 0-3.67-0.4-5.18-1.22-1.5-0.84-2.66-2-3.5-3.46-0.83-1.46-1.25-3.12-1.25-4.97 0-1.85 0.4-3.5 1.18-4.97 0.82-1.46 1.92-2.6 3.31-3.42 1.42-0.81 3-1.22 4.76-1.22 1.75 0 3.32 0.4 4.71 1.22 1.4 0.82 2.49 1.96 3.28 3.42 0.8 1.44 1.19 3.1 1.19 4.97l-0.04 0.8Zm-9.14-8.2c-1.83 0-3.36 0.58-4.61 1.76-1.22 1.15-1.92 2.66-2.09 4.54h13.43c-0.17-1.88-0.88-3.39-2.13-4.54-1.22-1.18-2.75-1.76-4.6-1.76Z"/>
     <path
-        android:pathData="M148.64 21.3v5.55h11.13v5.51h-11.13V41h-7.13V15.8h19.77v5.5h-12.64zm34.85 0.19V41h-6.52v-2.09c-0.72 0.8-1.58 1.4-2.6 1.8c-1 0.41-2.07 0.61-3.2 0.61c-2.51 0-4.53-0.74-6.04-2.23c-1.5-1.49-2.23-3.72-2.23-6.7V21.5h6.84v9.79c0 1.46 0.27 2.53 0.82 3.2c0.56 0.68 1.36 1.01 2.41 1.01c1.09 0 1.96-0.37 2.63-1.11c0.7-0.77 1.05-1.94 1.05-3.5v-9.4h6.84zm16.21-0.33c2.43 0 4.37 0.72 5.83 2.16c1.5 1.44 2.23 3.62 2.23 6.52V41h-6.83V30.96c0-2.67-1.07-4-3.2-4c-1.19 0-2.13 0.38-2.85 1.15c-0.7 0.77-1.05 1.92-1.05 3.46V41H187V21.49h6.52v2.12c0.77-0.79 1.68-1.39 2.74-1.8c1.05-0.43 2.2-0.65 3.45-0.65zm10.63-5.36h8.14l-1.37 16.02h-5.44l-1.33-16.02zm4.07 25.52c-1.2 0-2.19-0.36-2.95-1.08c-0.77-0.74-1.16-1.64-1.16-2.7c0-1.08 0.39-1.96 1.16-2.66c0.77-0.7 1.75-1.04 2.95-1.04c1.2 0 2.17 0.34 2.91 1.04c0.77 0.7 1.16 1.58 1.16 2.66c0 1.06-0.39 1.96-1.16 2.7c-0.76 0.72-1.74 1.08-2.91 1.08z">
+        android:pathData="M148.64 21.3v5.55h11.13v5.51h-11.13V41h-7.13V15.8h19.77v5.5h-12.64Zm34.85 0.19V41h-6.52v-2.09c-0.72 0.8-1.58 1.4-2.6 1.8-1 0.41-2.07 0.61-3.2 0.61-2.51 0-4.53-0.74-6.04-2.23-1.5-1.49-2.23-3.72-2.23-6.7V21.5h6.84v9.79c0 1.46 0.27 2.53 0.82 3.2 0.56 0.68 1.36 1.01 2.41 1.01 1.09 0 1.96-0.37 2.63-1.11 0.7-0.77 1.05-1.94 1.05-3.5v-9.4h6.84Zm16.21-0.33c2.43 0 4.37 0.72 5.83 2.16 1.5 1.44 2.23 3.62 2.23 6.52V41h-6.83V30.96c0-2.67-1.07-4-3.2-4-1.19 0-2.13 0.38-2.85 1.15-0.7 0.77-1.05 1.92-1.05 3.46V41H187V21.49h6.52v2.12c0.77-0.79 1.68-1.39 2.74-1.8 1.05-0.43 2.2-0.65 3.45-0.65Zm10.63-5.36h8.14l-1.37 16.02h-5.44l-1.33-16.02Zm4.07 25.52c-1.2 0-2.19-0.36-2.95-1.08-0.77-0.74-1.16-1.64-1.16-2.7 0-1.08 0.39-1.96 1.16-2.66 0.77-0.7 1.75-1.04 2.95-1.04 1.2 0 2.17 0.34 2.91 1.04 0.77 0.7 1.16 1.58 1.16 2.66 0 1.06-0.39 1.96-1.16 2.7-0.76 0.72-1.74 1.08-2.91 1.08Z">
         <aapt:attr name="android:fillColor">
             <gradient
                 android:type="linear"
@@ -107,10 +107,10 @@
                 android:endX="142"
                 android:endY="50">
                 <item
-                    android:color="#00A3FF"
+                    android:color="#FF00A3FF"
                     android:offset="0"/>
                 <item
-                    android:color="#2F80ED"
+                    android:color="#FF2F80ED"
                     android:offset="1"/>
             </gradient>
         </aapt:attr>
