--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,47 +4,47 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scrollbars="none"
-    android:scrollIndicators="none">
+    android:scrollbars="none">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         tools:context=".activity.login.LoginActivity">
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginStart="@dimen/_16dp"
+            android:layout_marginTop="@dimen/_24dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/logo_login" />
+            app:srcCompat="@drawable/logo_login"
+            android:contentDescription="@string/imageview" />
 
         <TextView
             android:id="@+id/titl_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/_16dp"
             android:fontFamily="@font/montserrat_bold"
             android:letterSpacing="0.03"
-            android:text="Welcome Back"
-            android:textColor="@color/textMainColor"
-            android:textSize="24sp"
+            android:text="@string/welcome_back"
+            android:textColor="@color/titleTextColor"
+            android:textSize="@dimen/_24sp"
             app:layout_constraintStart_toStartOf="@+id/imageView"
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <TextView
             android:id="@+id/titl_login2"
-            android:layout_width="300dp"
+            android:layout_width="@dimen/_300dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="@dimen/_4dp"
             android:fontFamily="@font/montserrat_regular"
             android:letterSpacing="0.03"
-            android:text="Make sure you get login access from the admin"
-            android:textColor="@color/grayTextColor"
-            android:textSize="14sp"
+            android:text="@string/welcome_txt"
+            android:textColor="@color/descTextColor"
+            android:textSize="@dimen/_14sp"
             app:layout_constraintStart_toStartOf="@+id/titl_login"
             app:layout_constraintTop_toBottomOf="@+id/titl_login" />
 
@@ -55,16 +55,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/titl_login2"
-            app:srcCompat="@drawable/illust_login" />
+            app:srcCompat="@drawable/illust_login"
+            android:contentDescription="@string/imageview" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/usernameEt"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:hint="Username"
+            android:layout_marginStart="@dimen/_16dp"
+            android:layout_marginEnd="@dimen/_16dp"
+            android:hint="@string/username"
             app:boxStrokeColor="@color/darkBlue"
             app:endIconMode="clear_text"
             app:layout_constraintEnd_toEndOf="parent"
@@ -77,7 +78,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
-                android:textColor="@color/blackP"
+                android:textColor="@color/titleTextColor"
                 android:textColorHighlight="@color/unselected_icon"
                 android:textColorHint="@color/unselected_icon"
                 android:textColorLink="@color/unselected_icon" />
@@ -88,10 +89,10 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            android:hint="Password"
+            android:layout_marginStart="@dimen/_16dp"
+            android:layout_marginTop="@dimen/_8dp"
+            android:layout_marginEnd="@dimen/_16dp"
+            android:hint="@string/password"
             app:boxStrokeColor="@color/darkBlue"
             app:endIconMode="password_toggle"
             app:layout_constraintEnd_toEndOf="parent"
@@ -111,19 +112,19 @@
         <carbon.widget.TextView
             android:id="@+id/loginBtn"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="32dp"
+            android:layout_height="@dimen/_50dp"
+            android:layout_marginStart="@dimen/_16dp"
+            android:layout_marginTop="@dimen/_20dp"
+            android:layout_marginEnd="@dimen/_16dp"
+            android:layout_marginBottom="@dimen/_32dp"
             android:background="@drawable/btn_bg"
-            android:elevation="15dp"
+            android:elevation="@dimen/_15dp"
             android:fontFamily="@font/montserrat_bold"
             android:gravity="center"
             android:letterSpacing="0.03"
             android:shadowColor="@color/blue"
             android:shadowRadius="100"
-            android:text="LOGIN"
+            android:text="@string/login"
             android:textColor="@color/white"
             app:carbon_elevationSpotShadowColor="@color/blue"
             app:elevation="20dp"
@@ -136,9 +137,9 @@
             android:id="@+id/loading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginStart="@dimen/_8dp"
+            android:layout_marginEnd="@dimen/_8dp"
+            android:layout_marginBottom="@dimen/_8dp"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
