--- a/app/src/main/res/layout/fragment_student.xml
+++ b/app/src/main/res/layout/fragment_student.xml
@@ -3,12 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".ui.fragment.StudentFragment">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/titl_beststudents"
@@ -19,8 +23,8 @@
             android:fontFamily="@font/montserrat_bold"
             android:letterSpacing="0.02"
             android:text="@string/titl_beststudent"
-            android:textColor="@color/textMainColor"
-            android:textSize="18sp"
+            android:textColor="@color/titleTextColor"
+            android:textSize="@dimen/_18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -28,10 +32,10 @@
             android:id="@+id/tv_more"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:text="see more"
+            android:layout_marginEnd="@dimen/_16dp"
+            android:text="@string/see_more"
             android:fontFamily="@font/montserrat_regular"
-            android:textSize="12sp"
+            android:textSize="@dimen/_12sp"
             android:textColor="@color/blue"
             app:layout_constraintBottom_toBottomOf="@+id/titl_beststudents"
             app:layout_constraintEnd_toEndOf="parent"
@@ -39,11 +43,11 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_beststudents"
-            android:layout_width="409dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:itemCount="3"
+            tools:itemCount="4"
             tools:listitem="@layout/item_students"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/_16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/titl_beststudents" />
@@ -52,12 +56,12 @@
             android:id="@+id/titl_topstudents"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="@dimen/_24dp"
             android:fontFamily="@font/montserrat_bold"
             android:letterSpacing="0.02"
             android:text="@string/titl_topstudent"
-            android:textColor="@color/textMainColor"
-            android:textSize="18sp"
+            android:textColor="@color/titleTextColor"
+            android:textSize="@dimen/_18sp"
             app:layout_constraintStart_toStartOf="@+id/titl_beststudents"
             app:layout_constraintTop_toBottomOf="@+id/rv_beststudents" />
 
@@ -65,11 +69,11 @@
             android:id="@+id/tv_more"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="@dimen/_16dp"
             android:fontFamily="@font/montserrat_regular"
-            android:text="see more"
+            android:text="@string/see_more"
             android:textColor="@color/blue"
-            android:textSize="12sp"
+            android:textSize="@dimen/_12sp"
             app:layout_constraintBottom_toBottomOf="@+id/titl_topstudents"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/titl_topstudents"
@@ -77,13 +81,15 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_topstudents"
-            android:layout_width="409dp"
-            android:layout_height="200dp"
-            android:layout_marginTop="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/titl_topstudents" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
 
 </FrameLayout>
