--- a/app/src/main/res/layout/onboarding_view.xml
+++ b/app/src/main/res/layout/onboarding_view.xml
@@ -8,14 +8,14 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="300dp"
+        android:layout_width="@dimen/_300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="@dimen/_24dp"
         android:text="@string/onboarding_slide1_title"
         android:fontFamily="@font/montserrat_bold"
         android:letterSpacing="0.02"
-        android:textColor="@color/textMainColor"
-        android:textSize="24sp"
+        android:textColor="@color/titleTextColor"
+        android:textSize="@dimen/_24sp"
         app:layout_constraintStart_toStartOf="@+id/introImage"
         app:layout_constraintTop_toBottomOf="@+id/introImage" />
 
@@ -23,22 +23,23 @@
         android:id="@+id/introImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="@dimen/_100dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ilust_onboarding1" />
+        app:srcCompat="@drawable/ilust_onboarding1"
+        android:contentDescription="@string/imageview" />
 
     <TextView
         android:id="@+id/description"
-        android:layout_width="250dp"
+        android:layout_width="@dimen/_250dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="@dimen/_12dp"
         android:text="@string/onboarding_slide1_desc"
         android:fontFamily="@font/montserrat_medium"
         android:letterSpacing="0.02"
-        android:textSize="14sp"
-        android:textColor="@color/textMainColor"
+        android:textSize="@dimen/_14sp"
+        android:textColor="@color/titleTextColor"
         app:layout_constraintStart_toStartOf="@+id/title"
         app:layout_constraintTop_toBottomOf="@+id/title" />
 
