--- a/app/src/main/res/drawable/bg_categorymodule.xml
+++ b/app/src/main/res/drawable/bg_categorymodule.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="123"
     android:viewportHeight="33">
     <path
-        android:fillColor="#092134"
+        android:fillColor="@color/titleTextColor"
         android:pathData="M0 8c0-4.42 3.58-8 8-8h107c4.42 0 8 3.58 8 8v17c0 4.42-3.58 8-8 8h-107c-4.42 0-8-3.58-8-8z"/>
 </vector>
