--- a/app/src/main/res/drawable/ic_bookmark_off.xml
+++ b/app/src/main/res/drawable/ic_bookmark_off.xml
@@ -4,7 +4,7 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:strokeColor="#092134"
+        android:strokeColor="@color/titleTextColor"
         android:strokeWidth="2"
         android:strokeLineCap="round"
         android:strokeLineJoin="round"
