--- a/app/src/main/res/drawable/ic_upload.xml
+++ b/app/src/main/res/drawable/ic_upload.xml
@@ -4,19 +4,19 @@
     android:viewportWidth="36"
     android:viewportHeight="36">
     <path
-        android:strokeColor="#A9A9A9"
+        android:strokeColor="@color/iconGrayColor"
         android:strokeWidth="3"
         android:strokeLineCap="round"
         android:strokeLineJoin="round"
         android:pathData="M31.5 22.5v6c0 0.8-0.32 1.56-0.88 2.12S29.3 31.5 28.5 31.5h-21c-0.8 0-1.56-0.32-2.12-0.88S4.5 29.3 4.5 28.5v-6"/>
     <path
-        android:strokeColor="#A9A9A9"
+        android:strokeColor="@color/iconGrayColor"
         android:strokeWidth="3"
         android:strokeLineCap="round"
         android:strokeLineJoin="round"
         android:pathData="M25.5 12L18 4.5L10.5 12"/>
     <path
-        android:strokeColor="#A9A9A9"
+        android:strokeColor="@color/iconGrayColor"
         android:strokeWidth="3"
         android:strokeLineCap="round"
         android:strokeLineJoin="round"
