--- a/app/src/main/res/layout/activity_about_app.xml
+++ b/app/src/main/res/layout/activity_about_app.xml
@@ -9,6 +9,7 @@
 
     <TextView
         android:id="@+id/titl_aboutapp"
+        android:textColor="@color/descTextColor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_16dp"
