--- a/app/src/main/res/layout/activity_detail_student.xml
+++ b/app/src/main/res/layout/activity_detail_student.xml
@@ -11,12 +11,12 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_gravity="center"
-        android:layout_marginTop="12dp">
+        android:layout_marginTop="@dimen/_12dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/iv_detail_student"
-            android:layout_width="160dp"
-            android:layout_height="160dp"
+            android:layout_width="@dimen/_160dp"
+            android:layout_height="@dimen/_160dp"
             android:src="@drawable/img_profile"
             android:layout_gravity="center"/>
 
@@ -26,18 +26,18 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="@dimen/_20dp">
 
             <TextView
                 android:id="@+id/tv_detail_username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Username"
+                android:text="@string/username"
                 android:fontFamily="@font/montserrat_bold"
                 android:textAlignment="center"
-                android:textColor="@color/blackP"
+                android:textColor="@color/titleTextColor"
                 android:letterSpacing="0.02"
-                android:textSize="20sp"/>
+                android:textSize="@dimen/_20sp"/>
 
             <ImageButton
                 android:id="@+id/btn_point"
@@ -45,7 +45,8 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_point_home"
                 android:background="@android:color/transparent"
-                android:layout_marginStart="12dp"/>
+                android:layout_marginStart="@dimen/_12dp"
+                android:contentDescription="@string/imagebutton" />
         </LinearLayout>
 
         <LinearLayout
@@ -54,13 +55,14 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
-            android:layout_marginTop="8dp">
+            android:layout_marginTop="@dimen/_8dp">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_like"
-                android:background="@android:color/transparent"/>
+                android:background="@android:color/transparent"
+                android:contentDescription="@string/imageview" />
 
             <TextView
                 android:id="@+id/tv_detail_like"
@@ -71,34 +73,34 @@
                 android:textAlignment="center"
                 android:textColor="@android:color/holo_red_light"
                 android:letterSpacing="0.02"
-                android:textSize="14sp"
-                android:layout_marginStart="8dp"/>
+                android:textSize="@dimen/_14sp"
+                android:layout_marginStart="@dimen/_8dp"/>
 
         </LinearLayout>
 
         <TextView
             android:id="@+id/tv_detail_desc_student"
             android:layout_width="match_parent"
-            android:layout_height="65dp"
-            android:textSize="13sp"
-            android:text="Description"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
+            android:layout_height="@dimen/_65dp"
+            android:textSize="@dimen/_12sp"
+            android:text="@string/description"
+            android:layout_marginStart="@dimen/_24dp"
+            android:layout_marginEnd="@dimen/_24dp"
             android:textAlignment="center"
             android:maxLines="3"
             android:letterSpacing="0.02"
-            android:textColor="@color/unselected_icon"
+            android:textColor="@color/descTextColor"
             android:fontFamily="@font/montserrat_medium"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="@dimen/_10dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Your Project :"
+            android:text="@string/your_project"
             android:fontFamily="@font/montserrat_semi_bold"
-            android:textSize="18sp"
-            android:textColor="@color/blackP"
+            android:textSize="@dimen/_18sp"
+            android:textColor="@color/titleTextColor"
             android:layout_gravity="center"
             android:letterSpacing="0.02"/>
 
@@ -108,82 +110,79 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
-            android:layout_marginTop="16dp">
+            android:layout_marginTop="@dimen/_16dp">
 
             <com.meetsl.scardview.SCardView
                 android:id="@+id/btn_github"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="@dimen/_70dp"
+                android:layout_height="@dimen/_70dp"
                 android:defaultFocusHighlightEnabled="true"
-                app:cardBackgroundColor="@android:color/white"
-                app:cardCornerRadius="10dp"
+                app:cardBackgroundColor="@color/cardMainColor"
+                app:cardCornerRadius="@dimen/_10dp"
                 app:cardCornerVisibility="none"
-                app:cardElevation="5dp"
+                app:cardElevation="@dimen/_5dp"
                 app:cardLightDirection="none"
                 app:cardPreventCornerOverlap="false"
-                app:cardShadowEndColor="#0333B5E5"
-                app:cardShadowStartColor="#E8E9EC"
                 app:cardUseCompatPadding="false"
                 app:cardUseCornerArea="false">
 
                 <ImageButton
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
+                    android:layout_width="@dimen/_35dp"
+                    android:layout_height="@dimen/_35dp"
                     android:layout_gravity="center"
                     android:background="@android:color/transparent"
-                    android:src="@drawable/ic_github" />
+                    android:src="@drawable/ic_github"
+                    android:contentDescription="@string/imagebutton" />
 
             </com.meetsl.scardview.SCardView>
 
             <com.meetsl.scardview.SCardView
                 android:id="@+id/btn_linkedin"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="@dimen/_70dp"
+                android:layout_height="@dimen/_70dp"
                 android:defaultFocusHighlightEnabled="true"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                app:cardBackgroundColor="@android:color/white"
-                app:cardCornerRadius="10dp"
+                android:layout_marginStart="@dimen/_16dp"
+                android:layout_marginEnd="@dimen/_16dp"
+                app:cardBackgroundColor="@color/cardMainColor"
+                app:cardCornerRadius="@dimen/_10dp"
                 app:cardCornerVisibility="none"
-                app:cardElevation="5dp"
+                app:cardElevation="@dimen/_5dp"
                 app:cardLightDirection="none"
                 app:cardPreventCornerOverlap="false"
-                app:cardShadowEndColor="#0333B5E5"
-                app:cardShadowStartColor="#E8E9EC"
                 app:cardUseCompatPadding="false"
                 app:cardUseCornerArea="false">
 
                 <ImageButton
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
+                    android:layout_width="@dimen/_35dp"
+                    android:layout_height="@dimen/_35dp"
                     android:layout_gravity="center"
                     android:background="@android:color/transparent"
-                    android:src="@drawable/ic_linkedin" />
+                    android:src="@drawable/ic_linkedin"
+                    android:contentDescription="@string/imagebutton" />
 
             </com.meetsl.scardview.SCardView>
 
             <com.meetsl.scardview.SCardView
                 android:id="@+id/btn_behance"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="@dimen/_70dp"
+                android:layout_height="@dimen/_70dp"
                 android:defaultFocusHighlightEnabled="true"
-                app:cardBackgroundColor="@android:color/white"
-                app:cardCornerRadius="10dp"
+                app:cardBackgroundColor="@color/cardMainColor"
+                app:cardCornerRadius="@dimen/_10dp"
                 app:cardCornerVisibility="none"
-                app:cardElevation="5dp"
+                app:cardElevation="@dimen/_5dp"
                 app:cardLightDirection="none"
                 app:cardPreventCornerOverlap="false"
-                app:cardShadowEndColor="#0333B5E5"
-                app:cardShadowStartColor="#E8E9EC"
                 app:cardUseCompatPadding="false"
                 app:cardUseCornerArea="false">
 
                 <ImageButton
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
+                    android:layout_width="@dimen/_35dp"
+                    android:layout_height="@dimen/_35dp"
                     android:layout_gravity="center"
                     android:background="@android:color/transparent"
-                    android:src="@drawable/ic_behance" />
+                    android:src="@drawable/ic_behance"
+                    android:contentDescription="@string/imagebutton" />
 
             </com.meetsl.scardview.SCardView>
         </LinearLayout>
@@ -191,27 +190,28 @@
         <carbon.widget.Button
             android:id="@+id/btn_like"
             android:layout_width="match_parent"
-            android:layout_height="44dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="24dp"
+            android:layout_height="@dimen/_44dp"
+            android:layout_marginStart="@dimen/_24dp"
+            android:layout_marginTop="@dimen/_24dp"
+            android:layout_marginEnd="@dimen/_24dp"
             android:background="@drawable/btn_bg"
-            app:carbon_elevation="12dp"
+            app:carbon_elevation="@dimen/_12dp"
             android:fontFamily="@font/montserrat_semi_bold"
             android:gravity="center"
             android:letterSpacing="0.03"
             android:shadowColor="@color/blue"
             android:shadowRadius="100"
-            android:text="LIKE"
+            android:text="@string/like"
             android:textColor="@color/white"
             app:carbon_elevationSpotShadowColor="@color/blue"
-            app:elevation="20dp"/>
+            app:elevation="@dimen/_20dp"/>
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/illust_profile_student"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:contentDescription="@string/imageview" />
     </LinearLayout>
 
 </LinearLayout>
