--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,14 +21,15 @@
         android:id="@+id/cardview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="16dp"
+        app:cardCornerRadius="@dimen/_8dp"
+        app:cardElevation="@dimen/_16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="parent">
 
         <io.ak1.BubbleTabBar
-            android:layout_marginTop="12dp"
-            android:layout_marginBottom="12dp"
+            android:layout_marginTop="@dimen/_12dp"
+            android:layout_marginBottom="@dimen/_12dp"
+            android:saveEnabled="true"
             android:id="@+id/bubbleTabBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -37,11 +38,11 @@
             app:bubbletab_menuResource="@menu/bottom_menu"
             app:bubbletab_custom_font="@font/montserrat_medium"
             app:bubbletab_disabled_icon_color="@color/unselected_icon"
-            app:bubbletab_horizontal_padding="18dp"
-            app:bubbletab_icon_padding="5sp"
-            app:bubbletab_icon_size="14dp"
-            app:bubbletab_title_size="14sp"
-            app:bubbletab_vertical_padding="10dp" />
+            app:bubbletab_horizontal_padding="@dimen/_18dp"
+            app:bubbletab_icon_padding="@dimen/_5dp"
+            app:bubbletab_icon_size="@dimen/_14dp"
+            app:bubbletab_title_size="@dimen/_14sp"
+            app:bubbletab_vertical_padding="@dimen/_10dp" />
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
