--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -26,8 +26,8 @@
     <LinearLayout
         android:id="@+id/dotslayout"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_marginEnd="24dp"
+        android:layout_height="@dimen/_30dp"
+        android:layout_marginEnd="@dimen/_24dp"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,33 +35,34 @@
 
     <ImageButton
         android:id="@+id/nextBtn"
-        android:layout_width="180dp"
-        android:layout_height="70dp"
+        android:layout_width="@dimen/_180dp"
+        android:layout_height="@dimen/_70dp"
         android:background="@drawable/btn_onboarding_next"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:contentDescription="btn" />
+        android:contentDescription="@string/imagebutton" />
 
     <ImageButton
         android:id="@+id/startBtn"
-        android:layout_width="180dp"
-        android:layout_height="70dp"
+        android:layout_width="@dimen/_180dp"
+        android:layout_height="@dimen/_70dp"
         android:background="@drawable/btn_started"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="@string/imageview" />
 
     <Button
         android:id="@+id/skipBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="@dimen/_16dp"
+        android:layout_marginBottom="@dimen/_8dp"
         android:background="@android:color/transparent"
         android:text="@string/skip"
         android:fontFamily="@font/montserrat_medium"
         android:textSize="14sp"
-        android:textColor="@color/textMainColor"
+        android:textColor="@color/titleTextColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/nextBtn"
         app:layout_constraintStart_toStartOf="parent"
