--- a/app/src/main/res/layout/item_list_module.xml
+++ b/app/src/main/res/layout/item_list_module.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -8,14 +7,14 @@
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="@dimen/_12dp"
+        android:layout_marginTop="@dimen/_16dp"
+        android:layout_marginEnd="@dimen/_12dp"
+        android:layout_marginBottom="@dimen/_16dp"
         android:elevation="@dimen/_16dp"
-        app:cardCornerRadius="12dp"
+        app:cardCornerRadius="@dimen/_12dp"
         app:cardCornerVisibility="none"
-        app:cardElevation="10dp"
+        app:cardElevation="@dimen/_10dp"
         app:cardMaxElevation="@dimen/_16dp"
         app:cardUseCornerArea="true"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -32,29 +31,28 @@
                 android:id="@+id/iv_module"
                 android:layout_width="match_parent"
                 android:layout_height="155dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginStart="@dimen/_16dp"
+                android:layout_marginTop="@dimen/_16dp"
+                android:layout_marginEnd="@dimen/_16dp"
                 android:background="@drawable/img_weblist"
                 android:scaleType="centerCrop"
-                app:carbon_cornerRadius="8dp" />
+                app:carbon_cornerRadius="@dimen/_8dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginStart="@dimen/_16dp"
+                android:layout_marginTop="@dimen/_8dp"
+                android:layout_marginEnd="@dimen/_16dp"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/tv_label_module"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:fontFamily="@font/montserrat_medium"
-                    android:text="ANDROID - FIRYAL"
-                    android:textColor="@color/textMainColor"
+                    android:textColor="@color/titleTextColor"
                     android:textSize="@dimen/_14sp" />
 
                 <TextView
@@ -62,45 +60,42 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/montserrat_regular"
-                    android:text="26 Aug"
-                    android:textColor="@color/grayTextColor"
-                    android:textSize="12sp" />
+                    android:textColor="@color/descTextColor"
+                    android:textSize="@dimen/_12sp" />
             </LinearLayout>
 
             <TextView
                 android:id="@+id/tv_tittle_module"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="2dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginStart="@dimen/_16dp"
+                android:layout_marginTop="@dimen/_2dp"
+                android:layout_marginEnd="@dimen/_16dp"
                 android:fontFamily="@font/montserrat_bold"
-                android:text="Retrofit with Kotlin"
-                android:textColor="@color/textMainColor"
-                android:textSize="18sp" />
+                android:textColor="@color/titleTextColor"
+                android:textSize="@dimen/_18sp" />
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
+                android:layout_height="@dimen/_1dp"
+                android:layout_marginStart="@dimen/_16dp"
+                android:layout_marginTop="@dimen/_8dp"
+                android:layout_marginEnd="@dimen/_16dp"
                 android:background="@color/lineMainColor" />
 
             <TextView
                 android:id="@+id/tv_desc_module"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginStart="@dimen/_16dp"
+                android:layout_marginTop="@dimen/_8dp"
+                android:layout_marginEnd="@dimen/_16dp"
+                android:layout_marginBottom="@dimen/_16dp"
                 android:fontFamily="@font/montserrat_regular"
                 android:letterSpacing="0.02"
                 android:maxLines="2"
-                android:text="This module explains how to use a retrofit library that serves to process data."
-                android:textColor="@color/grayTextColor"
-                android:textSize="10sp" />
+                android:textColor="@color/descTextColor"
+                android:textSize="@dimen/_10sp" />
 
         </LinearLayout>
 
