--- a/app/src/main/res/layout/item_students.xml
+++ b/app/src/main/res/layout/item_students.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -13,9 +12,8 @@
         android:layout_marginStart="@dimen/_16dp"
         android:layout_marginEnd="@dimen/_16dp"
         android:layout_marginBottom="@dimen/_16dp"
-        android:background="@color/backgroundMainColor"
-        app:cardCornerRadius="12dp"
-        app:cardElevation="8dp"
+        app:cardCornerRadius="@dimen/_12dp"
+        app:cardElevation="@dimen/_8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,11 +25,11 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/iv_best_student"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginBottom="12dp"
+                android:layout_width="@dimen/_70dp"
+                android:layout_height="@dimen/_70dp"
+                android:layout_marginStart="@dimen/_12dp"
+                android:layout_marginTop="@dimen/_12dp"
+                android:layout_marginBottom="@dimen/_12dp"
                 android:background="@drawable/img_profile"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -39,15 +37,14 @@
 
             <TextView
                 android:id="@+id/tv_name_student_best"
-                android:layout_width="200dp"
+                android:layout_width="@dimen/_200dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginStart="@dimen/_12dp"
+                android:layout_marginTop="@dimen/_10dp"
                 android:fontFamily="@font/montserrat_bold"
                 android:maxLines="1"
-                android:text="Kevin Seith"
-                android:textColor="@color/textMainColor"
-                android:textSize="20sp"
+                android:textColor="@color/titleTextColor"
+                android:textSize="@dimen/_20sp"
                 app:layout_constraintStart_toEndOf="@+id/iv_best_student"
                 app:layout_constraintTop_toTopOf="@+id/iv_best_student" />
 
@@ -55,11 +52,10 @@
                 android:id="@+id/tv_beston"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
+                android:layout_marginTop="@dimen/_2dp"
                 android:fontFamily="@font/montserrat_medium"
-                android:text="Best on Mobile"
                 android:textColor="@color/blue"
-                android:textSize="12sp"
+                android:textSize="@dimen/_12sp"
                 app:layout_constraintStart_toStartOf="@+id/tv_name_student_best"
                 app:layout_constraintTop_toBottomOf="@+id/tv_name_student_best" />
 
@@ -67,12 +63,11 @@
                 android:id="@+id/tv_point_best"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="12dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginEnd="@dimen/_12dp"
+                android:layout_marginBottom="@dimen/_10dp"
                 android:fontFamily="@font/montserrat_semi_bold"
-                android:text="5000"
                 android:textColor="@color/blue"
-                android:textSize="12sp"
+                android:textSize="@dimen/_12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -81,7 +76,7 @@
                 android:id="@+id/img_liststudent1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="4dp"
+                android:layout_marginEnd="@dimen/_4dp"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_point_best"
                 app:layout_constraintEnd_toStartOf="@+id/tv_point_best"
                 app:layout_constraintTop_toTopOf="@+id/tv_point_best"
