--- a/app/src/main/res/layout/onboarding_slide3.xml
+++ b/app/src/main/res/layout/onboarding_slide3.xml
@@ -8,36 +8,37 @@
         android:id="@+id/img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="@dimen/_70dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/illust_onboarding3" />
+        app:srcCompat="@drawable/illust_onboarding3"
+        android:contentDescription="@string/imageview" />
 
     <TextView
         android:id="@+id/titleTv"
-        android:layout_width="300dp"
+        android:layout_width="@dimen/_300dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="@dimen/_16dp"
+        android:layout_marginTop="@dimen/_32dp"
         android:fontFamily="@font/montserrat_bold"
         android:letterSpacing="0.002"
         android:text="@string/onboarding_slide3_title"
-        android:textColor="@color/textMainColor"
+        android:textColor="@color/titleTextColor"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img" />
 
     <TextView
         android:id="@+id/descTV"
-        android:layout_width="300dp"
+        android:layout_width="@dimen/_300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="@dimen/_8dp"
         android:fontFamily="@font/montserrat_medium"
         android:letterSpacing="0.02"
         android:text="@string/onboarding_slide3_desc"
-        android:textColor="@color/textMainColor"
-        android:textSize="14sp"
+        android:textColor="@color/titleTextColor"
+        android:textSize="@dimen/_14sp"
         app:layout_constraintStart_toStartOf="@+id/titleTv"
         app:layout_constraintTop_toBottomOf="@+id/titleTv" />
 
