--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,22 +1,24 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.LearnApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.LearnApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/blue</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorOnPrimary">#1D2229</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_200</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@android:color/transparent</item>
         <!-- Customize your theme here. -->
     </style>
 
-    <color name="textMainColor">#F2F2F2</color>
-    <color name="cardMainColor">#5033373D</color>
+    <color name="titleTextColor">#FFFFFF</color>
+    <color name="descTextColor">#DBDBDB</color>
+    <color name="whiteTextColor">#092134</color>
+    <color name="cardMainColor">#33373D</color>
     <color name="backgroundMainColor">#232D37</color>
     <color name="lineMainColor">#7C7C7C</color>
-    <color name="grayTextColor">#7A7A7A</color>
+    <color name="iconGrayColor">#E2E2E2</color>
 </resources>
