--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,32 @@
     <dimen name="_14dp">14dp</dimen>
     <dimen name="_3dp">3dp</dimen>
     <dimen name="_11sp">11sp</dimen>
+    <dimen name="_10dp">10dp</dimen>
+    <dimen name="_8dp">8dp</dimen>
+    <dimen name="_12sp">12sp</dimen>
+    <dimen name="_18sp">18sp</dimen>
+    <dimen name="_10sp">10sp</dimen>
+    <dimen name="_6dp">6dp</dimen>
+    <dimen name="_16sp">16sp</dimen>
+    <dimen name="_70dp">70dp</dimen>
+    <dimen name="_200dp">200dp</dimen>
+    <dimen name="_4dp">4dp</dimen>
+    <dimen name="_160dp">160dp</dimen>
+    <dimen name="_65dp">65dp</dimen>
+    <dimen name="_18dp">18dp</dimen>
+    <dimen name="_5dp">5dp</dimen>
+    <dimen name="_35dp">35dp</dimen>
+    <dimen name="_44dp">44dp</dimen>
+    <dimen name="_230dp">230dp</dimen>
+    <dimen name="_40dp">40dp</dimen>
+    <dimen name="_24sp">24sp</dimen>
+    <dimen name="_300dp">300dp</dimen>
+    <dimen name="_50dp">50dp</dimen>
+    <dimen name="_32dp">32dp</dimen>
+    <dimen name="_100dp">100dp</dimen>
+    <dimen name="_250dp">250dp</dimen>
+    <dimen name="_55dp">55dp</dimen>
+    <dimen name="_30dp">30dp</dimen>
+    <dimen name="_180dp">180dp</dimen>
+    <dimen name="_170dp">170dp</dimen>
 </resources>
